Fixed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -1057,7 +1057,7 @@ span svg {
     margin: 3%;
   }
   .timesHero {
-    height: 50vh;
+    height: 65vh;
   }
   #title1 {
     margin-top: 25%;
